fixes div alignment

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -45,9 +45,10 @@ body {
       }
     }
   }
-  .movie-search-ul {
+  .movie-search-list {
     display: flex;
     justify-content: center;
+    align-items: center;
     margin: 15px 0 0 0;
     padding: 100px 0 0 0;
   }
@@ -56,7 +57,6 @@ body {
     flex-direction: row;
     list-style-type: none;
     margin: 15px 0;
-    max-width: 800px;
     .movie-img-container a {
       margin: 0 20px 0 0;
       transition: 0.3s;
@@ -82,7 +82,7 @@ body {
       }
     }
     .movie-img-container-2 {
-      min-width: 100%;
+      min-width: 450px;
     }
       
     div h2 {
